# openreview

./: .envrc  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
etc/: nginx.conf  supervisord.conf
openreview/: manage.py
openreview/openreviewapp/: asgi.py  localsettings.py.example  settings.py  wsgi.py
src/: pytest.ini
src/frontend/: package.json  postcss.config.js  tailwind.config.js  vite.config.js
src/frontend/src/: index.css  main.ts  style.css
src/openreviewapp/: asgi.py  settings.py  testsettings.py  urls.py  wsgi.py
src/web/: admin.py  context_processors.py  export.py  forms.py  models.py  submissions_processing.py  views.py
src/web/management/commands/: assign_reviewers.py  copy_questions.py  export_humaneai.py  export_wordpress.py  (+3 more)
src/web/migrations/: 0001_initial.py  0002_entry.py  0003_alter_entry_data.py  0004_auto_20210622_1022.py  0005_ratingquestion.py  0006_ratinganswer.py  0007_auto_20210622_1307.py  0008_sitesettings.py  0009_ratinganswer_question.py  0010_ratingquestion_changed.py  0011_auto_20210708_1544.py  0012_alter_sitesettings_url.py  0013_rating.py  0014_entry_is_active.py  0015_alter_entry_category.py  0016_entry_reviewers.py  0017_alter_entry_options.py  0018_alter_entry_reviewers.py  0019_auto_20230318_1258.py  0020_auto_20230318_1304.py  0021_alter_project_gforms_title_id.py  0022_alter_ratingquestion_scale.py  0023_auto_20230318_1537.py  0024_ratingquestion_include_in_statistics.py  0025_alter_ratingquestion_include_in_statistics.py  0026_alter_userprofile_user.py  0027_entry_search_text.py
src/web/templates/: _nav.html  base.html
src/web/templatetags/: web_extras.py
src/web/tests/: factories.py  test_basic.py
(+18 files in other folders)
