[project]
name = "openreview"
version = "1.0"
dependencies = [
    "django-anymail[mailgun]==8.4",
    "django-braces==1.14.0",
    "django-su==0.9.0",
    "django-svg-image-form-field==1.0.1",
    "django-vite==1.1.0",
    "django>=3.2,<3.3",
    "factory-boy==3.2.0",
    "gunicorn==20.1.0",
    "icecream==2.1.0",
    "ipdb>=0.13.13",
    "numpy<2",
    "openpyxl",
    "pandas>=2,<3",
    "pillow==8.3.0",
    "psycopg2-binary",
    "pytest-django==4.4.0",
    "requests==2.25.1",
    "sentry-sdk",
    "styleframe==4.2",
    "tablib[xlsx]==3.0.0",
    "uwsgi>=2.0.28; sys_platform == 'linux'",
    "xlsxwriter==3.0.1",
]
requires-python = ">=3.12,<3.13"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I"]

[tool.uv]
package = false

[tool.djlint]
ignore = "H006,H023,H013,T003,H030,H031,D018"
